# emotion-recognition-demo

./: .gitignore  README.md  app_image.py  app_video.py  pyproject.toml
